--- a/about.html
+++ b/about.html
@@ -28,29 +28,8 @@
     <main>
         <div class="container">
             <section class="about">
-                <h2>About Us</h2>
-                <p>We are 9th-grade students of Podar World School, Sama.</p>
-                <p>We, Sai Shinkar and Dhruv Dhagai, 9th graders at Podar World School, have developed a health monitoring solutions app as part of an experimental project. Our mission is to provide easy access to disease information, promoting health awareness. Our app empowers users to understand their health better, contributing to a well-informed community. </p>
-            </section>
+              Heyy...Am an average 15 year old teen, who has developed a health monitoring app as part of a experimental project. My mission is to provide easy access to disease information, promoting health awareness. My app empowers users to understand their health better, contributing to a well informed community.</section>
             
-            <section class="github-section">
-                <div class="container">
-                    <h2>GitHub Profiles</h2>
-                    <div class="github-profile">
-                        <a href="https://github.com/saishinkar2" target="_blank">
-                            <img src="github-mark.svg" alt="GitHub Logo 1" width="50" height="50" class="img img-fluid">
-                        </a>
-                        <p><a href="https://github.com/saishinkar2" target="_blank" style="text-decoration: none; font-family:bold; font-size:20px;">Sai Shinkar</a></p>
-                    </div>
-                    <div class="github-profile">
-                        <a href="https://github.com/dhdhagai" target="_blank">
-                            <img src="github-mark.svg" alt="GitHub Logo 2" width="50" height="50" class="img img-fluid">
-                        </a>
-                        <p><a href="https://github.com/dhdhagai" target="_blank"style="text-decoration: none; font-family:bold; font-size:20px;">Dhruv Dhagai</a></p>
-                    </div>
-                    <!-- Add more profiles as needed -->
-                </div>
-            </section>
         </div>
         <div id="hm-footer"></div>
 
